--- a/styles.css
+++ b/styles.css
@@ -73,11 +73,9 @@ h4 {
 }
 
 /********************************* HEADER *********************************/
-#landing .hamburger  {
-  height: 2em;
+header .hamburger.fas.fa-bars {
+  width: 15em;
 }
-
-
 
 .header {
   background:	#3d2954;
@@ -101,10 +99,12 @@ h1 {
 }
 
 .close {
+  background: #bdbfc1;
+  height: 5%;
   opacity: 0;
   position: absolute;
-  top: 10px;
-  right: 10px;
+    left: 85%;
+    top: 25%;
 }
 
 .close.active {
@@ -114,11 +114,12 @@ h1 {
 .menu {
   display: none;
   position: absolute;
-  height: 50%;
-  width: 50%;
-  top: 0;
-  left: 0;
-  background-color: #ffcccc;
+  height: 80%;
+  width: 70%;
+    top: 20%;
+    left: 10%;
+  background-color: #bdbfc1;
+  padding: 1% 5%;
 }
 
 .menu.active {
@@ -126,9 +127,19 @@ h1 {
 }
 
 .links {
+  width: 30%;
+  padding-bottom: 5%;
+}
+
+.links a {
+  color: #3F4347;
   display: flex;
   flex-direction: column;
-  padding: 25px;
+  padding: 1% 0;
+}
+
+.links a:hover {
+  color: blue;
 }
 
 .cake-review {
@@ -140,7 +151,6 @@ h1 {
 /********************************* FOOTER *********************************/
 
 footer {
-  /* background-color: #53537c; */
   background: #CDCED0;
   color: #3D2954;
   padding: 20px 0;
@@ -170,7 +180,7 @@ main {
 }
 
 .medium-image-text img {
-  width: 400px;
+  width: 25em;
 }
 
 .description-text {
@@ -209,8 +219,8 @@ hr {
 
 .modal-close {
   position: absolute;
-  right: 10px;
-  top: 10px;
+    right: 10px;
+    top: 10px;
 }
 
 .modal.active {
