--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,6 @@ h4 {
 }
 
 /********************************* HEADER *********************************/
-header .hamburger.fas.fa-bars {
-  width: 15em;
-}
-
 .header {
   background:	#3d2954;
   color: #fff;
@@ -213,7 +209,7 @@ hr {
   top: 50%;
   transform: translate(-50%, -50%);
   padding: 100px 50px;
-  z-index: 2;
+  z-index: 10;
 }
 
 .modal-close {
@@ -239,10 +235,10 @@ hr {
    margin: .5%;
    max-width: 25%;
    position: relative;
+   z-index: 1;
 }
 
 .gallery-item img {
-  min-width: 300px;
   width: 100%;
 }
 
@@ -251,20 +247,29 @@ hr {
 }
 
 .gallery-btn {
+  background: #fff;
   position: absolute;
-  background-color: #ffcccc;
     top: 50%;
     left: 50%;
   transform: translate(-50%, -50%);
+  opacity: 1;
+  font-family: 'Work Sans', sans-serif;
+  font-size: .6em;
+  height: 15%;
+  width: 50%;
   opacity: 0;
 }
 
-.gallery-item:hover .gallery-btn {
-  opacity: .5;
+.gallery-btn:focus {
+  opacity: 1;
 }
 
-.gallery-item:hover .gallery-btn:hover {
-  opacity: 1;
+.gallery-btn:hover {
+  opacity: .95;
+}
+
+.gallery-item:hover {
+  transform: scale(1.05);
 }
 
 /********************************* HELPERS *********************************/
