--- a/styles.css
+++ b/styles.css
@@ -59,13 +59,12 @@ button {
 
 h1 {
   text-align: center;
-  /* font-size: 50px; */
-  /* margin: 45px 0; */
 }
 
-h4 {
+h2 {
   font-size: 1.3em;
   text-align: center;
+  margin: 0 0 2%;
 }
 
 .content {
@@ -105,6 +104,7 @@ h1 {
 
 .close.active {
   opacity: 1;
+  z-index: 20;
 }
 
 .menu {
@@ -120,6 +120,7 @@ h1 {
 
 .menu.active {
   display: block;
+  z-index: 20;
 }
 
 .links {
@@ -223,11 +224,14 @@ hr {
 }
 
 /********************************* GALLERY PAGE *********************************/
+.main-gallery {
+  padding: 0 5%;
+}
+
 
 .gallery-wrapper {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 2%;
 }
 
 .gallery-item {
@@ -271,6 +275,18 @@ hr {
 .gallery-item:hover {
   transform: scale(1.05);
 }
+
+.main-gallery h3 {
+  /* font-weight: lighter; */
+  margin: 3% auto;
+  width: 80%;
+}
+
+.main-gallery h3 span {
+  font-style: italic;
+  font-weight: lighter;
+}
+
 
 /********************************* HELPERS *********************************/
 
