--- a/styles.css
+++ b/styles.css
@@ -30,21 +30,62 @@ a {
   text-decoration: none;
 }
 
+#h2-on-order-page {
+  padding: 0 auto;
+}
+
 form {
-  background-color: rgba(255, 255, 255, .7);
+  background: #fff;
+  box-shadow: 6px 6px 2px 1px rgba(0, 0, 0, .2);
   margin-bottom: 25px;
   padding: 25px;
-  width: 600px;
-  margin: 40px auto;
+  width: 60%;
+  margin: 5% auto;
+}
+
+form input {
+  font-size: 1em;
+}
+
+form input:focus {
+  background: #FFFF99;
+}
+
+form label {
+  color: #292b2c;
+  display: block;
+  margin: 2% 0 1%;
+  font-size: .9em;
 }
 
 input[type="text"], input[type="number"], textarea {
   width: 100%;
 }
-/*
-input:focus {
-  outline: none!important;
-} */
+
+form div {
+  margin: 5% 0;
+}
+
+form p {
+  display: inline;
+  font-size: .8em;
+  margin-right: 5%;
+}
+input[type="radio"]: {
+  margin-right: 5%;
+}
+
+input[type="text"]::placeholder {
+  font-size: 1em;
+}
+
+#textarea:focus {
+  background: #FFFF99;
+}
+
+::placeholder {
+  font-size: 2em;
+}
 
 button {
   background-color: #333333;
@@ -55,6 +96,19 @@ button {
   text-transform: uppercase;
   display: block;
   margin: 0 auto;
+}
+
+form button {
+  background: #2e1154;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1em;
+  padding: 2%;
+}
+
+form button:hover {
+  transform: scaleX(1.1);
 }
 
 h1 {
@@ -71,6 +125,10 @@ h2 {
   flex: 1 0 auto;
 }
 
+#date {
+  display: block;
+  margin-bottom: 2%;
+}
 /********************************* HEADER *********************************/
 .header {
   background:	#3d2954;
@@ -197,8 +255,7 @@ hr {
 /********************************* ORDER PAGE *********************************/
 
 .order {
-  background-image: url('./images/cupcakes.jpeg');
-  background-size: 15%;
+  background: linear-gradient(#ecedf1, #a9aaaa);
 }
 
 .modal {
@@ -314,8 +371,8 @@ hr {
 }
 
 .subtext {
-  color: #95a5a6;
-  font-size: 10px;
+  color: #ff0000;
+  font-size: 1em;
 }
 
 .margin-top--small {
