Reformat styles for inputs

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ form {
   background: #fff;
   box-shadow: 6px 6px 2px 1px rgba(0, 0, 0, .2);
   margin-bottom: 25px;
-  padding: 25px;
+  padding: 2% 2% 3% 3.5%;
   width: 60%;
   margin: 5% auto;
 }
@@ -59,18 +59,31 @@ form label {
 }
 
 input[type="text"], input[type="number"], textarea {
-  width: 100%;
+  width: 95%;
 }
 
 form div {
-  margin: 5% 0;
+  margin: -3.5% 0 5%;
+  width: 100%;
 }
 
-form p {
-  display: inline;
-  font-size: .8em;
-  margin-right: 5%;
+form div label {
+  width: 25%;
 }
+
+form div label {
+  font-size: .85em;
+}
+
+form div {
+  display: flex;
+  justify-content: flex-start;
+}
+
+#textarea {
+  width: 375%;
+}
+
 input[type="radio"]: {
   margin-right: 5%;
 }
@@ -105,6 +118,7 @@ form button {
   cursor: pointer;
   font-size: 1em;
   padding: 2%;
+  margin-top: 5%;
 }
 
 form button:hover {
@@ -212,6 +226,7 @@ footer {
   text-align: center;
   height: 5em;
   flex-shrink: 0;
+  margin-bottom: 0;
 }
 
 .social-media a i {
@@ -225,6 +240,7 @@ main {
   height: auto;
   padding: 1% 10%;
 }
+
 
 .main-image p {
   color: 	#3f4347;
