--- a/styles.css
+++ b/styles.css
@@ -313,6 +313,7 @@ hr {
 }
 
 .modal-close {
+  cursor: pointer;
   position: absolute;
     right: 10px;
     top: 10px;
@@ -400,8 +401,8 @@ hr {
   text-align: center;
 }
 
-.green {
-  color: #27ae60;
+.yellow {
+  color: #ffff00;
 }
 
 .medium-image {
